--- a/package.json
+++ b/package.json
@@ -11,36 +11,40 @@
       "url": "https://github.com/CyberT33N/scrapcore-mongodb-puppeteer/issues"
     },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "chalk-animation": "^1.6.0",
-    "circular-json": "^0.5.9",
     "cheerio": "^1.0.0-rc.3",
+    "chalk-animation": "^1.6.0",
+    "chalk": "^4.1.0",
+    "circular-json": "^0.5.9",
+    "clipboardy": "^2.3.0",
+    "connect-timeout": "^1.9.0",
     "dateformat": "^3.0.3",
     "dookie": "^0.4.1",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "fancy-log": "^1.3.3",
-    "follow-redirects": "^1.12.1",
-    "fs-extra": "^9.0.0",
-    "google-auth-library": "^6.0.0",
+    "fs-extra": "^9.0.1",
     "googleapis": "^27.0.0",
+    "google-auth-library": "^6.0.5",
     "gradient-string": "^1.2.0",
     "html-entities": "^1.3.1",
+    "longjohn": "^0.2.12",
     "mime-types": "^2.1.27",
-    "moment": "^2.26.0",
-    "mongodb": "^3.5.8",
-    "node-os-utils": "^1.2.2",
+    "moment": "^2.27.0",
+    "mongodb": "^3.5.9",
+    "node-os-utils": "^1.3.0",
     "number-to-words": "^1.2.4",
     "object-reader": "^1.1.4",
-    "password-generator": "^2.2.3",
+    "password-generator": "^2.3.2",
     "path": "^0.12.7",
-    "puppeteer-page-proxy": "^1.2.5",
-    "puppeteer": "^3.2.0",
+    "puppeteer-page-proxy": "^1.2.8",
+    "puppeteer": "^5.2.1",
     "randomatic": "^3.1.1",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "simple-timestamp": "^2.0.0",
+    "unique-names-generator": "^4.3.0",
     "unq": "^0.0.2",
-    "unique-names-generator": "^4.2.0",
-    "uuid": "^8.1.0"
+    "uuid": "^8.2.0"
   },
   "devDependencies": {},
   "scripts": {
